Added a board http apis
