# src/main/resources/swagger.yaml
@@ -108,7 +108,6 @@ paths:
       description: "This can only be done by the logged in user."
       operationId: "deleteUser"
       produces:
-        - "application/xml"
         - "application/json"
       parameters:
         - name: "userId"
@@ -121,6 +120,75 @@ paths:
           description: "Invalid username supplied"
         404:
           description: "User not found"
+  /board:
+    post:
+      security:
+        - api_key: []
+      tags:
+        - "board"
+      summary: "Create board"
+      description: "This can only be done by the logged in user."
+      operationId: "createBoard"
+      produces:
+        - "application/json"
+      parameters:
+        - in: "body"
+          name: "body"
+          description: "Created board object"
+          required: true
+          schema:
+            $ref: "#/definitions/BoardRequest"
+      responses:
+        default:
+          description: "successful operation"
+  /board/{boardId}:
+    get:
+      tags:
+        - "board"
+      summary: "Get Board by board id"
+      description: ""
+      operationId: "getBoardById"
+      security:
+        - api_key: []
+      produces:
+        - "application/json"
+      parameters:
+        - name: "boardId"
+          in: "path"
+          description: "The board id that needs to be fetched. Use 1 for testing. "
+          required: true
+          type: "string"
+      responses:
+        200:
+          description: "successful operation"
+          schema:
+            $ref: "#/definitions/Board"
+        404:
+          description: "Board not found"
+    delete:
+      security:
+        - api_key: []
+      tags:
+        - "board"
+      summary: "Delete board"
+      description: "This can only be done by the logged in user."
+      operationId: "deleteBoard"
+      produces:
+        - "application/json"
+      parameters:
+        - name: "boardId"
+          in: "path"
+          description: "The board id that needs to be deleted"
+          required: true
+          type: "string"
+      responses:
+        200:
+          description: "successful operation"
+          schema:
+            $ref: "#/definitions/Board"
+        404:
+          description: "Board not found"
+
 securityDefinitions:
   api_key:
     type: "apiKey"
@@ -266,16 +334,29 @@ definitions:
         type: "string"
       starred:
         type: "boolean"
-      userIds:
-        type: "array"
-        items:
-          type: "integer"
       createdDate:
         type: "string"
         format: "date-time"
       modifiedDate:
         type: "string"
         format: "date-time"
+    xml:
+      name: "Board"
+  BoardRequest:
+    type: "object"
+    properties:
+      name:
+        type: "string"
+      description:
+        type: "string"
+      closed:
+        type: "boolean"
+      pinned:
+        type: "boolean"
+      boardUrl:
+        type: "string"
+      starred:
+        type: "boolean"
     xml:
       name: "Board"
   List:
